# Text-to-Sketch-Generation

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: sample.py  train.py
sketch/: __init__.py  dataset.py  inference.py  losses.py  models.py  train.py  utils.py
