[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sketch"
version = "0.1.0"
description = "Modularized Sketch-RNN project split from notebook"
authors = [{name="Your Name"}]
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "scikit-learn",
]
